# flix-api

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  uwsgi.ini
accounts/: admin.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_user_groups_alter_user_user_permissions.py  0003_alter_user_groups_alter_user_user_permissions.py
actors/: admin.py  models.py  serializers.py  urls.py  views.py
actors/management/commands/: import_actors.py
actors/migrations/: 0001_initial.py
app/: permissions.py  settings.py  urls.py
genres/: admin.py  models.py  serializers.py  urls.py  views.py
genres/migrations/: 0001_initial.py  0002_alter_genre_options.py
movies/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
movies/migrations/: 0001_initial.py
reviews/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
reviews/migrations/: 0001_initial.py  0002_alter_review_id.py  0002_review_user.py
scripts/: entrypoint.sh
utils/: pagination.py
